@@ -1,5 +1,6 @@
 Grid Class Key dev
 =================================================
+- disable editor when output filter is applied to the cell
 - [#6] Grid's setting to replace the "Children" tab's title
 - fix properties validation from old version
 - add "output filter" to the value of the grid to replace javascript's renderer function for non JS geek :)
